// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > matches snapshot — default 1`] = `
<div>
  <label
    class="group relative inline-block"
  >
    <input
      class="class-input peer font-display h-controllg   
   font-normal text-base bg-grey leading-[150%] text-black px-4 relative rounded-xl transition-all 
   duration-300 focus:outline-none focus:border-blue focus:shadow-[0_0_0_1px_var(--color-blue)] border border-grey"
    />
    <div
      class="class-label font-normal font-display leading-[150%] absolute z-[1] transition-all duration-300 px-4
peer-focus:text-blue peer-focus:text-[11px] peer-focus:top-1 peer-focus:-translate-y-0 left-0 text-xs11 invalid-false text-dark-grey hasValue-false top-1/2 -translate-y-1/2"
    >
      Email
    </div>
  </label>
</div>
`;

exports[`Input > matches snapshot — with error 1`] = `
<div>
  <label
    class="group relative inline-block"
  >
    <input
      class="class-input peer font-display h-controllg   
   font-normal text-base bg-grey leading-[150%] text-black px-4 relative rounded-xl transition-all 
   duration-300 focus:outline-none focus:border-blue focus:shadow-[0_0_0_1px_var(--color-blue)] border border-red shadow-[0_0_0_1px_var(--color-red)]"
    />
    <div
      class="class-label font-normal font-display leading-[150%] absolute z-[1] transition-all duration-300 px-4
peer-focus:text-blue peer-focus:text-[11px] peer-focus:top-1 peer-focus:-translate-y-0 left-0 text-xs11 invalid text-red hasValue-false top-1/2 -translate-y-1/2"
    >
      Username
    </div>
  </label>
</div>
`;
